--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,136 @@
-*{
-    margin: 0;
-}
+.navbar {
+    margin-bottom: 0;
+    background-color: #2d2d30;
+    border: 0;
+    font-size: 11px !important;
+    letter-spacing: 4px;
+    opacity: 0.9;
+  }
+  
 
-body{
-    width: 100%;
-    min-height: 2000px;
-    background-color: black;
-}
+  .navbar li a, .navbar .navbar-brand {
+    color: #d5d5d5 !important;
+  }
+  
+  .navbar-nav li a:hover {
+    color: #fff !important;
+  }
+  
+  .navbar-nav li.active a {
+    color: #fff !important;
+    background-color:#29292c !important;
+  }
+  
+  .navbar-default .navbar-toggle {
+    border-color: transparent;
+  }
+  
+  .open .dropdown-toggle {
+    color: #fff ;
+    background-color: #555 !important;
+  }
+  
+  .dropdown-menu li a {
+    color: #000 !important;
+  }
+  
+  .dropdown-menu li a:hover {
+    background-color: red !important;
+  }
+
+  /* header pic */
+  .carousel-inner img {
+
+    width: 100%; 
+    margin: auto;
+  }
+  
+  .carousel-caption h3 {
+    color: #fff !important;
+  }
+  
+  @media (max-width: 600px) {
+    .carousel-caption {
+      display: none;
+    }
+  }
+
+  .container {
+    padding: 80px 120px;
+  }
+
+
+  .person {
+    border: 10px solid transparent;
+    margin-bottom: 25px;
+    width: 80%;
+    height: 80%;
+    opacity: 0.8;
+  }
+  .person:hover {
+    border-color: #f1f1f1;
+  }
+  .list-group-item:first-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+  }
+  
+  .list-group-item:last-child {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  
+  /* Remove border and add padding to thumbnails */
+  .thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+  }
+  
+  .thumbnail p {
+    margin-top: 15px;
+    color: #555;
+  }
+  
+  /* Black buttons with extra padding and without rounded borders */
+  .btn {
+    padding: 10px 20px;
+    background-color: #333;
+    color: #f1f1f1;
+    border-radius: 0;
+    transition: .2s;
+  }
+  
+  /* On hover, the color of .btn will transition to white with black text */
+  .btn:hover, .btn:focus {
+    border: 1px solid #333;
+    background-color: #fff;
+    color: #000;
+  }
+
+  .bread{
+    width: 50%;
+    height: 50px;
+  }
+
+  .midlle{
+  height: 40px;
+  background-color: #29292c;
+  color: #d5d5d5;
+  }
+
+
+  footer {
+    background-color: #2d2d30;
+    color: #f5f5f5;
+    padding: 32px;
+  }
+  
+  footer a {
+    color: #f5f5f5;
+  }
+  
+  footer a:hover {
+    color: #777;
+    text-decoration: none;
+  }
